# mpi_stream

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE.txt  Makefile  NEWS  README.md  config_cmake.h.in  stream.c
c/: README.md  configure.ac
rust/mpi_stream/: Cargo.toml
rust/mpi_stream/src/: main.rs
src/: CMakeLists.txt  Makefile  Makefile.am  stream.c
